--- a/index.html
+++ b/index.html
@@ -1,113 +1,94 @@
 <!DOCTYPE html>
 <html id="forside" lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="forside.css" />
     <title></title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash forside.png" />
-      <p>
-        Nytænkende Uddannelseskoncepter til Børn og Unge
-      </p>
+        <img src="img/splash forside.png" />
+        <p>
+            Nytænkende Uddannelseskoncepter til Børn og Unge
+        </p>
     </section>
 
     <section class="icons">
-      <div class="gridcon">
-        <div class="griditem">
-          <img src="icons/plant.png" />
-          <h3>Iværksætterfritisklub</h3>
-          <p>
-            Blooms private fritidsklub for børn 4. klasse og op.
-          </p>
+        <div class="gridcon">
+            <div class="griditem">
+                <img src="icons/plant.png" />
+                <h3>Iværksætterfritisklub</h3>
+                <p>
+                    Blooms private fritidsklub for børn 4. klasse og op.
+                </p>
+            </div>
+            <div class="griditem">
+                <img src="icons/tent.png" />
+                <h3>Camps</h3>
+                <p>
+                    Forløb der bygger på børns læring i ferieperioderne.
+                </p>
+            </div>
+            <div class="griditem">
+                <img src="icons/books.png" />
+                <h3>Undervisningsforløb</h3>
+                <p>
+                    Skoleforløb der bygger på børns læring ud fra forskellige kunstneriske udtryksformer.
+                </p>
+            </div>
+            <div class="griditem">
+                <img src="icons/earth.png" />
+                <h3>Internationalt arbejde</h3>
+                <p>
+                    Blooms arbejde på det globale plan.
+                </p>
+            </div>
         </div>
-        <div class="griditem">
-          <img src="icons/tent.png" />
-          <h3>Camps</h3>
-          <p>
-            Forløb der bygger på børns læring ud fra kreative værksteder,
-            materialer og faciliteter inden for forskellige kunstneriske
-            udtryksformer i ferieperioderne.
-          </p>
-        </div>
-        <div class="griditem">
-          <img src="icons/books.png" />
-          <h3>Undervisningsforløb</h3>
-          <p>
-            Skoleforløb der bygger på børns læring ud fra kreative værksteder,
-            materialer og faciliteter inden for forskellige kunstneriske
-            udtryksformer.
-          </p>
-        </div>
-        <div class="griditem">
-          <img src="icons/earth.png" />
-          <h3>Internationalt arbejde</h3>
-          <p>
-            Blooms arbejde på det globale plan.
-          </p>
-        </div>
-      </div>
     </section>
     <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <a href="fritidsklub.html"><button>læs mere her</button></a>
+<div class="gridcon">
+    <div class="griditem">
+        <a href="fritidsklub.html"><button>læs mere her</button></a>
+    </div>
+            <div class="griditem">
+                <a href="camp.html"><button>læs mere her</button></a>
+            </div>
+            <div class="griditem">
+                <a href="uddannelse.html"><button>læs mere her</button></a>
+            </div>
+            <div class="griditem">
+                <a href="internationalt.html"><button>læs mere her</button></a>
+            </div>
         </div>
-        <div class="griditem">
-          <a href="camp.html"><button>læs mere her</button></a>
-        </div>
-        <div class="griditem">
-          <a href="uddannelse.html"><button>læs mere her</button></a>
-        </div>
-        <div class="griditem">
-          <a href="internationalt.html"><button>læs mere her</button></a>
-        </div>
-      </div>
     </section>
     <section class="one">
-      <div class="gridcon2">
-        <div class="griditem">
-          <img src="img/forside.jpg" />
+        <div class="gridcon2">
+
+            <div class="griditem">
+                <h1>Om Bloom</h1>
+                <p>
+                    Bloom er et kreativt samlingspunkt for skabende fællesskaber på tværs af alder og interesse – et sted, hvor børn og voksne kan skabe kreative produkter og udvikle idéer indenfor kunst og kreativt iværksætteri. Bloom findes i KTAS' gamle telefonbygning fra 1898 midt i Gentofte. Historisk set har KTAS's bygninger over hele landet haft en særlig betydning og blev placeret i hjertet af den enkelte by, for at skabe kontakt mellem mennesker og give liv til nye relationer og projekter. Hos os i Bloom fortsætter vi denne tradition i en endnu mere nærværende form, hvor bygningen er rammen for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på de kreative relationer med de deltagende børn og voksne og på den håndværksmæssige ånd som grundlag for personlig og kommerciel udvikling.
+                </p>
+
+            </div>
+            <div class="griditem">
+                <img src="img/forside.jpg" />
+            </div>
         </div>
-        <div class="griditem">
-          <h1>Om Bloom</h1>
-          <p>
-            Bloom er et kreativt samlingspunkt for skabende fællesskaber på
-            tværs af alder og interesse – et sted, hvor børn og voksne kan skabe
-            kreative produkter og udvikle idéer indenfor kunst og kreativt
-            iværksætteri. Bloom findes i KTAS' gamle telefonbygning fra 1898
-            midt i Gentofte. Historisk set har KTAS's bygninger over hele landet
-            haft en særlig betydning og blev placeret i hjertet af den enkelte
-            by, for at skabe kontakt mellem mennesker og give liv til nye
-            relationer og projekter. Hos os i Bloom fortsætter vi denne
-            tradition i en endnu mere nærværende form, hvor bygningen er rammen
-            for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på
-            de kreative relationer med de deltagende børn og voksne og på den
-            håndværksmæssige ånd som grundlag for personlig og kommerciel
-            udvikling.
-          </p>
-        </div>
-      </div>
     </section>
 
     <section id="4">
-      <h2>Klik her for at se vores video om Bloom</h2>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/ScMzIvxBSi4"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+        <h2>Klik her for at se vores video om Bloom</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ScMzIvxBSi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <footer></footer>
-  </body>
-  <script src="main.js"></script>
+</body>
+<script src="main.js"></script>
+
 </html>
