--- a/fritidsklub.html
+++ b/fritidsklub.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>Fritidsklub</title>
   </head>
 
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash fritids.jpg" />
+      <img src="img/splash-fritids.jpg" alt="splash" />
       <p>Iværksætterfritidsklub</p>
     </section>
     <section>
@@ -43,13 +43,17 @@
         </div>
         <div class="gridcon">
           <div class="griditem">
-            <img class="underimg" src="img/aktiv3.jpg" />
+            <img
+              class="underimg"
+              src="img/aktiv3.jpg"
+              alt="dreng er lave print på en t-shirt"
+            />
           </div>
         </div>
       </div>
     </section>
 
     <footer></footer>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
