--- a/kontakt.html
+++ b/kontakt.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" id="kontakt">
+<html lang="da" id="kontakt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="kontakt.css" />
-    <title></title>
+    <title>Kontakt</title>
   </head>
 
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash kontarkt.jpg" />
+      <img src="img/splash-kontarkt.jpg" alt="splash" />
       <p>
         Kontakt
       </p>
@@ -31,7 +31,7 @@
     <section id="icons">
       <div class="gridcon">
         <div class="griditem">
-          <img src="img/JuliePi.png" />
+          <img src="img/JuliePi.png" alt="billede af julie" />
           <h3>Julie Pi, Co-Founder & Partner</h3>
           <p>
             Gennem hele sin karriere har Julie arbejdet med udviklingen af
@@ -48,7 +48,7 @@
           <p>Kontakt: Tlf: +45 22 41 10 55 Mail: juliepi@cfki.nu</p>
         </div>
         <div class="griditem">
-          <img src="img/KarinaRothhoffBrix.png" />
+          <img src="img/KarinaRothhoffBrix.png" alt="billede af karina" />
           <h3>Karina Rothoff Brix, Co-Founder & Partner</h3>
           <p>
             Karina er uddannet cand.merc.jur og har en master i
@@ -65,7 +65,7 @@
           <p>Kontakt: Tlf: +45 61 77 21 47 Mail: karina@cfki.nu</p>
         </div>
         <div class="griditem">
-          <img src="img/Soren.png" />
+          <img src="img/Soren.png" alt="billede af søren" />
           <h3>Søren Nørgaard, Partner</h3>
           <p>
             Søren er mangeårig iværksætter og forretningsudvikler, der altid har
@@ -122,6 +122,6 @@
     </section>
 
     <footer></footer>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
