--- a/uddannelse.html
+++ b/uddannelse.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>Uddannelsesforløb</title>
   </head>
 
   <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash_udd.jpg" />
+      <img src="img/splash_udd.jpg" alt="splash" />
       <p>Uddannelsesforløb</p>
     </section>
     <section>
@@ -34,7 +34,11 @@
     <section>
       <div class="gridcon">
         <div class="griditem">
-          <img class="underimg" src="img/aktiv2.jpg" />
+          <img
+            class="underimg"
+            src="img/aktiv2.jpg"
+            alt="børn der sidder og malere rundt om et bord"
+          />
         </div>
       </div>
     </section>
@@ -71,6 +75,6 @@
       </div>
     </section>
     <footer></footer>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
