--- a/footer.html
+++ b/footer.html
@@ -1,19 +1,28 @@
 <section class="gridcon_footer">
   <div>
-    <p>Adresses: <br>
-    Adolphsvej 59, 1. sal  2820 Gentofte <br>
-    Telefon: <br>
-    71 99 52 05</p>
+    <p>
+      Adresses: <br />
+      Adolphsvej 59, 1. sal 2820 Gentofte <br />
+      Telefon: <br />
+      71 99 52 05
+    </p>
   </div>
   <div>
-      <div class="gridcon_icons"></div>
-      <a href=""><img class="footer_icons" src="icons/instagram logo.png"></a>
-      <a href=""><img  class="footer_icons" src="icons/youtybe logo.png"></a>
-      <a href=""><img class="footer_icons" src="icons/facebook logo.png"></a>
-    </div>
+    <div class="gridcon_icons"></div>
+    <a href=""
+      ><img
+        class="footer_icons"
+        alt="instagram logo"
+        src="icons/instagram-logo.png"
+    /></a>
+    <a href=""
+      ><img class="footer_icons" alt="youtube logo" src="icons/youtybe-logo.png"
+    /></a>
+    <a href=""
+      ><img
+        class="footer_icons"
+        alt="facebook logo"
+        src="icons/facebook-logo.png"
+    /></a>
   </div>
 </section>
-
-
-
-
