--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<a href="index.html"><img src="img/6.png"/></a>
+<a href="index.html"><img src="img/6.png" alt="blooms logo"/></a>
 <a href="index.html" class="link">Forside</a>
 <a class="link" href="om.html">Om os</a>
 <div class="dropd">
