--- a/mobilmenu.html
+++ b/mobilmenu.html
@@ -1,7 +1,7 @@
 <!--    Made by Erik Terwan    -->
 <!--   24th of November 2015   -->
 <!--        MIT License        -->
-<nav role="navigation">
+<nav>
   <div id="menuToggle">
     <!--
           A fake / hidden checkbox is used as click reciever,
@@ -23,8 +23,8 @@
           Too bad the menu has to be inside of the button
           but hey, it's pure CSS magic.
           -->
-    <ul id="menu">
-      <a href="index.html"><img src="img/6.png"/></a>
+    <div id="menu">
+      <a href="index.html"><img src="img/6.png" alt="blooms logo"/></a>
       <a href="index.html" class="link">Forside</a>
       <a class="link" href="om.html">Om os</a>
       <div class="dropd">
@@ -39,6 +39,6 @@
       </div>
 
       <a class="link" href="kontakt.html">Kontakt</a>
-    </ul>
+    </div>
   </div>
 </nav>
