--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
         </div>
     </section>
     <section>
-<div class="gridcon">
-    <div class="griditem">
-        <a href="fritidsklub.html"><button>læs mere her</button></a>
-    </div>
+        <div class="gridcon">
             <div class="griditem">
-                <a href="camp.html"><button>læs mere her</button></a>
+                læs mere <a href="fritidsklub.html"> her</a>
             </div>
             <div class="griditem">
-                <a href="uddannelse.html"><button>læs mere her</button></a>
+                <a href="camp.html">læs mere her</a>
             </div>
             <div class="griditem">
-                <a href="internationalt.html"><button>læs mere her</button></a>
+                <a href="uddannelse.html">læs mere her</a>
+            </div>
+            <div class="griditem">
+                <a href="internationalt.html">læs mere her</a>
             </div>
         </div>
     </section>
@@ -78,14 +78,23 @@
 
             </div>
             <div class="griditem">
-                <img src="img/forside.jpg" />
+                <img src="img/forside.jpg" alt="children working" />
             </div>
         </div>
     </section>
 
-    <section id="4">
-        <h2>Klik her for at se vores video om Bloom</h2>
+    <section id="video">
+        <h1>Klik her for at se vores video om Bloom</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ScMzIvxBSi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
+    <section id="kontakt_info">
+
+        <h1> Vi glæder os til at høre fra dig!
+        </h1>
+        <div class="">
+            <a href="kontakt.html">Skriv til os</a>
+        </div>
     </section>
     <footer></footer>
 </body>
