Om Os rettelser

--- a/om.html
+++ b/om.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </section>
-        <section class="section">
+        <section class="section" class>
             <div class="gridcon">
                 <div class="griditem">
                     <h1>Fra ide til produkt</h1>
