--- a/camp.html
+++ b/camp.html
@@ -1,79 +1,82 @@
 <!DOCTYPE html>
-<html lang="da">
-  <head>
+<html id="camp" lang="da">
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Camps</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash-camps.jpg" alt="splash" />
-      <p>Feriecamps</p>
-    </section>
-    <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <p>
-            Iværksættercamp på Reffen Over 100 børn blev seje iværksættere
-            sidste sommer. Skal du være med i år? Hos BLOOM Institute bruger vi
-            ferierne til at lære børn at blive iværksættere på den fede og sjove
-            måde. Baseret på barnets lyst og motivation, skaber vi sammen
-            designs, som vi videreudvikler til reelle produkter. Vi synes, det
-            skal være lysten, der driver værket, og derfor samler vi børn med
-            ideer og godt humør i alle ferierne og har de bedste skabende uger,
-            man kan forestille sig.
-          </p>
-        </div>
-      </div>
+        <img src="img/splash-camps.jpg" alt="splash" />
+        <p>Feriecamps</p>
     </section>
 
     <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <img
-            class="underimg"
-            src="img/aktiv1.jpg"
-            alt="billede af børn der lige med redskaber"
-          />
+
+        <div class="gridcon">
+            <div class="griditem">
+                <p>
+                    Iværksættercamp på Reffen Over 100 børn blev seje iværksættere sidste sommer. Skal du være med i år? Hos BLOOM Institute bruger vi ferierne til at lære børn at blive iværksættere på den fede og sjove måde. Baseret på barnets lyst og motivation, skaber vi sammen designs, som vi videreudvikler til reelle produkter. Vi synes, det skal være lysten, der driver værket, og derfor samler vi børn med ideer og godt humør i alle ferierne og har de bedste skabende uger, man kan forestille sig.
+                </p>
+            </div>
         </div>
-      </div>
     </section>
+
+    <section>
+        <div class="gridcon">
+
+        </div>
+    </section>
+
     <section class="prisliste">
-      <div class="gridcon">
-        <div class="griditem">
-          <ul>
-            <li>
-              Kommende feriecamps Skab dit eget tøj brand I løbet af 5 dage
-              lærer du at designe og trykke dit helt eget t-shirt- eller
-              taske-print og forstå de kunstneriske processer bag.
-            </li>
-            <li>Pris: 1200 inkl. Frokost og din egen t-shirt/taske</li>
-            <li>
-              Tid og sted: Uge 27: Refshaleøen Uge 32: BLOOM Institute, Gentofte
-              Uge 32: Refshaleøen
-            </li>
-          </ul>
+        <div class="title">
+            <h2>Kommende feriecamps</h2>
         </div>
-        <div class="griditem">
-          <ul>
-            <li>
-              Fra skrot til flot design design Kom og bliv én af fremtidens
-              designere, der kan forvandle skrot til fede produkter.
-            </li>
-            <li>Pris: 1200 inkl. Frokost og dit produkt</li>
-            <li>
-              Pris: 1200 inkl. Frokost og dit produkt Tid og sted: Uge 27: BLOOM
-              Institute, Gentofte Uge 28: Refshaleøen
-            </li>
-          </ul>
+
+        <div class="gridcon">
+            <div class="griditem">
+
+                <h3> Skab dit eget Tøjmærke </h3>
+                <p>
+                    I løbet af 5 dage lærer du at designe og trykke dit helt eget t-shirt- eller taske-print og forstå de kunstneriske processer bag.
+                </p>
+                <ul>
+                    <li>Pris: 1200 inkl. Frokost og din egen t-shirt/taske</li>
+                    <li>
+                        Tid og sted:</li>
+                    <li>Uge 27: Refshaleøen</li>
+                    <li>Uge 32: BLOOM Institute, Gentofte</li>
+                    <li>Uge 32: Refshaleøen
+                    </li>
+                </ul>
+            </div>
+            <div class="griditem">
+                <h3>Fra skrot til flot design design </h3>
+                <p>
+                    Kom og bliv én af fremtidens designere, der kan forvandle skrot til fede produkter.
+                </p>
+                <ul>
+
+                    <li>Pris: 1200 inkl. Frokost og dit produkt</li>
+                    <li>
+                        Tid og sted:</li>
+                    <li> Uge 27: BLOOM Institute,Gentofte</li>
+                    <li> Uge 28: Refshaleøen
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
+    </section>
+    <section>
+        <h3>Vi glæder os til at se jer!</h3>
     </section>
     <footer></footer>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
