--- a/index.html
+++ b/index.html
@@ -1,98 +1,120 @@
 <!DOCTYPE html>
 <html id="forside" lang="da">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="forside.css" />
     <title>Forside</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-        <img src="img/splash-forside.png" alt="splash" />
-        <p>
-            Nytænkende Uddannelseskoncepter til Børn og Unge
-        </p>
+      <img src="img/splash-forside.png" alt="splash" />
+      <p>
+        Nytænkende Uddannelseskoncepter til Børn og Unge
+      </p>
     </section>
 
     <section class="icons">
-        <div class="gridcon">
-            <div class="griditem">
-                <img src="icons/plant.png" alt="icon for fritidklubben" />
-                <h3>Iværksætterfritisklub</h3>
-                <p>
-                    Blooms private fritidsklub for børn 4. klasse og op.
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="icons/tent.png" alt="icon for camps" />
-                <h3>Camps</h3>
-                <p>
-                    Forløb der bygger på børns læring i ferieperioderne.
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="icons/books.png" alt="icon for uddannelse forløb" />
-                <h3>Undervisningsforløb</h3>
-                <p>
-                    Skoleforløb der bygger på børns læring ud fra forskellige kunstneriske udtryksformer.
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="icons/earth.png" alt="icon for internationalt arbejde" />
-                <h3>Internationalt arbejde</h3>
-                <p>
-                    Blooms arbejde på det globale plan.
-                </p>
-            </div>
+      <div class="gridcon">
+        <div class="griditem">
+          <img src="icons/plant.png" alt="icon for fritidklubben" />
+          <h3>Iværksætterfritisklub</h3>
+          <p>
+            Blooms private fritidsklub for børn 4. klasse og op.
+          </p>
+          <a href="fritidsklub.html" class="smallscreen">læs mere her</a>
         </div>
+
+        <div class="griditem">
+          <img src="icons/tent.png" alt="icon for camps" />
+          <h3>Camps</h3>
+          <p>
+            Forløb der bygger på børns læring i ferieperioderne.
+          </p>
+          <a href="camp.html" class="smallscreen">læs mere her</a>
+        </div>
+        <div class="griditem">
+          <img src="icons/books.png" alt="icon for uddannelse forløb" />
+          <h3>Undervisningsforløb</h3>
+          <p>
+            Skoleforløb der bygger på børns læring ud fra forskellige
+            kunstneriske udtryksformer.
+          </p>
+          <a href="uddannelse.html" class="smallscreen">læs mere her</a>
+        </div>
+        <div class="griditem">
+          <img src="icons/earth.png" alt="icon for internationalt arbejde" />
+          <h3>Internationalt arbejde</h3>
+          <p>
+            Blooms arbejde på det globale plan.
+          </p>
+          <a href="internationalt.html" class="smallscreen">læs mere her</a>
+        </div>
+      </div>
     </section>
     <section>
-        <div class="gridcon">
-            <div class="griditem">læs mere <a href="fritidsklub.html"> her</a></div>
-            <div class="griditem">
-                <a href="camp.html">læs mere her</a>
-            </div>
-            <div class="griditem">
-                <a href="uddannelse.html">læs mere her</a>
-            </div>
-            <div class="griditem">
-                <a href="internationalt.html">læs mere her</a>
-            </div>
+      <div class="gridcon">
+        <div class="griditem"><a href="fritidsklub.html">læs mere her</a></div>
+        <div class="griditem">
+          <a href="camp.html">læs mere her</a>
         </div>
+        <div class="griditem">
+          <a href="uddannelse.html">læs mere her</a>
+        </div>
+        <div class="griditem">
+          <a href="internationalt.html">læs mere her</a>
+        </div>
+      </div>
     </section>
     <section class="one">
-        <div class="gridcon2">
-            <div class="griditem">
-                <h1>Om Bloom</h1>
-                <p>
-                    Bloom er et kreativt samlingspunkt for skabende fællesskaber på tværs af alder og interesse – et sted, hvor børn og voksne kan skabe kreative produkter og udvikle idéer indenfor kunst og kreativt iværksætteri. Bloom findes i KTAS' gamle telefonbygning fra 1898 midt i Gentofte. Historisk set har KTAS's bygninger over hele landet haft en særlig betydning og blev placeret i hjertet af den enkelte by, for at skabe kontakt mellem mennesker og give liv til nye relationer og projekter. Hos os i Bloom fortsætter vi denne tradition i en endnu mere nærværende form, hvor bygningen er rammen for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på de kreative relationer med de deltagende børn og voksne og på den håndværksmæssige ånd som grundlag for personlig og kommerciel udvikling.
-                </p>
-            </div>
-            <div class="griditem">
-                <img src="img/forside.jpg" alt="children working" />
-            </div>
+      <div class="gridcon2">
+        <div class="griditem">
+          <h1>Om Bloom</h1>
+          <p>
+            Bloom er et kreativt samlingspunkt for skabende fællesskaber på
+            tværs af alder og interesse – et sted, hvor børn og voksne kan skabe
+            kreative produkter og udvikle idéer indenfor kunst og kreativt
+            iværksætteri. Bloom findes i KTAS' gamle telefonbygning fra 1898
+            midt i Gentofte. Historisk set har KTAS's bygninger over hele landet
+            haft en særlig betydning og blev placeret i hjertet af den enkelte
+            by, for at skabe kontakt mellem mennesker og give liv til nye
+            relationer og projekter. Hos os i Bloom fortsætter vi denne
+            tradition i en endnu mere nærværende form, hvor bygningen er rammen
+            for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på
+            de kreative relationer med de deltagende børn og voksne og på den
+            håndværksmæssige ånd som grundlag for personlig og kommerciel
+            udvikling.
+          </p>
         </div>
+        <div class="griditem">
+          <img src="img/forside.jpg" alt="children working" />
+        </div>
+      </div>
     </section>
 
     <section id="video">
-        <h1>Klik her for at se vores video om Bloom</h1>
-        <iframe frameborder="0" width="480" height="270" src="https://www.dailymotion.com/embed/video/x79tqdn" allowfullscreen allow="autoplay"></iframe>
-
+      <h1>Klik her for at se vores video om Bloom</h1>
+      <iframe
+        frameborder="0"
+        width="480"
+        height="270"
+        src="https://www.dailymotion.com/embed/video/x79tqdn"
+        allowfullscreen
+        allow="autoplay"
+      ></iframe>
     </section>
 
     <section id="kontakt_info">
-        <h1>Vi glæder os til at høre fra dig!</h1>
-        <div class="">
-            <a href="kontakt.html">Skriv til os</a>
-        </div>
+      <h1>Vi glæder os til at høre fra dig!</h1>
+      <div class="">
+        <a href="kontakt.html">Skriv til os</a>
+      </div>
     </section>
     <footer></footer>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
