--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p>
             Blooms private fritidsklub for børn 4. klasse og op.
           </p>
-          <a href="fritidsklub.html" class="smallscreen">læs mere her</a>
+          <a href="fritidsklub.html" id="smallscreen">læs mere her</a>
         </div>
 
         <div class="griditem">
@@ -35,7 +35,7 @@
           <p>
             Forløb der bygger på børns læring i ferieperioderne.
           </p>
-          <a href="camp.html" class="smallscreen">læs mere her</a>
+          <a href="camp.html" id="smallscreen1">læs mere her</a>
         </div>
         <div class="griditem">
           <img src="icons/books.png" alt="icon for uddannelse forløb" />
@@ -44,7 +44,7 @@
             Skoleforløb der bygger på børns læring ud fra forskellige
             kunstneriske udtryksformer.
           </p>
-          <a href="uddannelse.html" class="smallscreen">læs mere her</a>
+          <a href="uddannelse.html" id="smallscreen2">læs mere her</a>
         </div>
         <div class="griditem">
           <img src="icons/earth.png" alt="icon for internationalt arbejde" />
@@ -52,21 +52,23 @@
           <p>
             Blooms arbejde på det globale plan.
           </p>
-          <a href="internationalt.html" class="smallscreen">læs mere her</a>
+          <a href="internationalt.html" id="smallscreen3">læs mere her</a>
         </div>
       </div>
     </section>
     <section>
       <div class="gridcon">
-        <div class="griditem"><a href="fritidsklub.html">læs mere her</a></div>
         <div class="griditem">
-          <a href="camp.html">læs mere her</a>
+          <a href="fritidsklub.html" id="bigscreen">læs mere her</a>
         </div>
         <div class="griditem">
-          <a href="uddannelse.html">læs mere her</a>
+          <a href="camp.html" id="bigscreen1">læs mere her</a>
         </div>
         <div class="griditem">
-          <a href="internationalt.html">læs mere her</a>
+          <a href="uddannelse.html" id="bigscreen2">læs mere her</a>
+        </div>
+        <div class="griditem">
+          <a href="internationalt.html" id="bigscreen3">læs mere her</a>
         </div>
       </div>
     </section>
