--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <p>
             Blooms private fritidsklub for børn 4. klasse og op.
           </p>
-          <a href="fritidsklub.html" id="smallscreen">læs mere her</a>
+          <a href="fritidsklub.html" id="smallscreen" class="button"
+            >læs mere her</a
+          >
         </div>
 
         <div class="griditem">
@@ -35,7 +37,7 @@
           <p>
             Forløb der bygger på børns læring i ferieperioderne.
           </p>
-          <a href="camp.html" id="smallscreen1">læs mere her</a>
+          <a href="camp.html" id="smallscreen1" class="button">læs mere her</a>
         </div>
         <div class="griditem">
           <img src="icons/books.png" alt="icon for uddannelse forløb" />
@@ -44,7 +46,9 @@
             Skoleforløb der bygger på børns læring ud fra forskellige
             kunstneriske udtryksformer.
           </p>
-          <a href="uddannelse.html" id="smallscreen2">læs mere her</a>
+          <a href="uddannelse.html" id="smallscreen2" class="button"
+            >læs mere her</a
+          >
         </div>
         <div class="griditem">
           <img src="icons/earth.png" alt="icon for internationalt arbejde" />
@@ -52,23 +56,31 @@
           <p>
             Blooms arbejde på det globale plan.
           </p>
-          <a href="internationalt.html" id="smallscreen3">læs mere her</a>
+          <a href="internationalt.html" id="smallscreen3" class="button"
+            >læs mere her</a
+          >
         </div>
       </div>
     </section>
     <section>
       <div class="gridcon">
         <div class="griditem">
-          <a href="fritidsklub.html" id="bigscreen">læs mere her</a>
+          <a href="fritidsklub.html" id="bigscreen" class="button"
+            >læs mere her</a
+          >
         </div>
         <div class="griditem">
-          <a href="camp.html" id="bigscreen1">læs mere her</a>
+          <a href="camp.html" id="bigscreen1" class="button">læs mere her</a>
         </div>
         <div class="griditem">
-          <a href="uddannelse.html" id="bigscreen2">læs mere her</a>
+          <a href="uddannelse.html" id="bigscreen2" class="button"
+            >læs mere her</a
+          >
         </div>
         <div class="griditem">
-          <a href="internationalt.html" id="bigscreen3">læs mere her</a>
+          <a href="internationalt.html" id="bigscreen3" class="button"
+            >læs mere her</a
+          >
         </div>
       </div>
     </section>
