--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html id="forside" lang="da">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="forside.css" />
     <title>Forside</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash-forside.png" alt="splash" />
-      <p>
-        Nytænkende Uddannelseskoncepter til Børn og Unge
-      </p>
+        <img src="img/splash-forside.png" alt="splash" />
+        <p>
+            Nytænkende Uddannelseskoncepter til Børn og Unge
+        </p>
     </section>
 
     <section class="icons">
-      <div class="gridcon">
-        <div class="griditem">
-          <img src="icons/plant.png" alt="icon for fritidklubben" />
-          <h3>Iværksætterfritisklub</h3>
-          <p>
-            Blooms private fritidsklub for børn 4. klasse og op.
-          </p>
-          <a href="fritidsklub.html" id="smallscreen" class="button"
-            >læs mere her</a
+        <div class="gridcon">
+            <div class="griditem">
+                <img src="icons/plant.png" alt="icon for fritidklubben" />
+                <h3>Iværksætterfritisklub</h3>
+                <p>
+                    Blooms private fritidsklub for børn 4. klasse og op.
+                </p>
+                <a href="fritidsklub.html" id="smallscreen" class="button">læs mere her</a
           >
         </div>
 
@@ -38,16 +38,14 @@
             Forløb der bygger på børns læring i ferieperioderne.
           </p>
           <a href="camp.html" id="smallscreen1" class="button">læs mere her</a>
-        </div>
-        <div class="griditem">
-          <img src="icons/books.png" alt="icon for uddannelse forløb" />
-          <h3>Undervisningsforløb</h3>
-          <p>
-            Skoleforløb der bygger på børns læring ud fra forskellige
-            kunstneriske udtryksformer.
-          </p>
-          <a href="uddannelse.html" id="smallscreen2" class="button"
-            >læs mere her</a
+            </div>
+            <div class="griditem">
+                <img src="icons/books.png" alt="icon for uddannelse forløb" />
+                <h3>Undervisningsforløb</h3>
+                <p>
+                    Skoleforløb der bygger på børns læring ud fra forskellige kunstneriske udtryksformer.
+                </p>
+                <a href="uddannelse.html" id="smallscreen2" class="button">læs mere her</a
           >
         </div>
         <div class="griditem">
@@ -71,10 +69,9 @@
         </div>
         <div class="griditem">
           <a href="camp.html" id="bigscreen1" class="button">læs mere her</a>
-        </div>
-        <div class="griditem">
-          <a href="uddannelse.html" id="bigscreen2" class="button"
-            >læs mere her</a
+            </div>
+            <div class="griditem">
+                <a href="uddannelse.html" id="bigscreen2" class="button">læs mere her</a
           >
         </div>
         <div class="griditem">
@@ -112,23 +109,17 @@
 
     <section id="video">
       <h1>Klik her for at se vores video om Bloom</h1>
-      <iframe
-        frameborder="0"
-        width="480"
-        height="270"
-        src="https://www.dailymotion.com/embed/video/x79tqdn"
-        allowfullscreen
-        allow="autoplay"
-      ></iframe>
+      <iframe src="https://player.vimeo.com/video/339564750?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </section>
 
     <section id="kontakt_info">
       <h1>Vi glæder os til at høre fra dig!</h1>
       <div class="">
         <a href="kontakt.html">Skriv til os</a>
-      </div>
+            </div>
     </section>
     <footer></footer>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
